<resources>
    <string name="app_name">中怡在线</string>
    <dimen name="key_height">45.0dip</dimen>
    <string name="quit">再按一次退出程序</string>

    <!--LoginActivity begin-->
    <string name="enter_user_name">请输入用户名</string>
    <string name="user_password">请输入密码</string>
    <string name="user_login">登 录</string>
    <string name="no_user_name_tip">用户名不能为空</string>
    <string name="no_user_password_tip">密码不能为空</string>
    <string name="login_failed">登录失败</string>
    <string name="logout_failed">登出失败</string>
    <string name="init">正在初始化数据，请稍后……</string>
    <!--LoginActivity end-->

    <!--MainActivity begin-->
    <string name="no_contact_list">请选择一个联系人会话</string>
    <string name="not_ever_visit">还未出诊或暂无患者会话</string>
    <string name="load_done">已经全部加载完毕</string>
    <string name="load_more">加载更多…</string>
    <string name="visit">出诊</string>
    <string name="visiting">接诊中</string>
    <string name="take_rest">收工</string>
    <string name="logout">退出登录</string>
    <string name="chat_failed">聊天创建失败</string>
    <string name="chat_logout_failed">聊天退出失败</string>
    <string name="waiting">等待中</string>
    <string name="all_count">累计</string>
    <string name="today_income">本日收入</string>
    <!--MainActivity end-->

    <!--SettingActivity begin-->
    <string name="setting_title">设置</string>
    <string name="my_info">我的信息</string>
    <string name="my_ask_history">我的问诊记录</string>
    <string name="my_income">我的收入</string>
    <string name="about">关于</string>
    <string name="personal_introduction">个人简介</string>
    <string name="personal_my_expert">我的擅长</string>
    <string name="input_personal_introduction">填写个人简介</string>
    <string name="input_my_expert">填写我的擅长</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="income_balance">账户余额(¥)：</string>
    <string name="my_all_income">我的总收入(¥)：</string>
    <string name="my_month_income">本月收入金额(¥)：</string>
    <string name="to_cash">提现</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="income_bill">收入账单</string>
    <string name="visit_count_all">总计接诊量：</string>
    <string name="visit_count_daily">本日接诊量：</string>
    <string name="visit_count_month">月接诊量：</string>
    <string name="imprint">版本说明</string>
    <string name="about_version_name">中怡在线%1$s</string>
    <string name="head_take_photo">拍照</string>
    <string name="head_from_photo">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="card_fali_msg">请确认是否开启了存储权限</string>
    <string name="permission_not_enough">缺少权限，请确认是否开启了录音，摄像头等权限！</string>
    <string name="camera_fail_msg">请确认是否开启了摄像头权限</string>
    <string name="go_setting">去设置</string>
    <string name="fileprovider">com.witnsoft.interhis.fileprovider</string>
    <string name="evaluate">患者评价</string>
    <string name="none_permission">请允许开启权限</string>
    <string name="chat_has_been_tick_out">聊天在其他设备登录</string>
    <string name="is_update_photo">是否保存头像</string>
    <string name="update_success">上传成功</string>
    <!--SettingActivity end-->

    <!-- 更新(Start) -->
    <string name="apk_name">app-debug%1$s.apk</string>
    <string name="update_title">软件版本更新</string>
    <string name="update_otherwise">您的软件版本过低，如不更新将无法使用</string>
    <string name="update_txt">有最新的软件包，请确认更新！</string>
    <string name="update_ok">更 新</string>
    <string name="update_cancel">以后再说</string>
    <string name="not_need_update">已经是最新版</string>
    <string name="network_is_mobile">您正处于移动网络环境下，下载会消耗您的数据流量，是否继续？</string>
    <string name="later_wifi_download">等待WiFi</string>
    <string name="network_continue">继续</string>
    <string name="download_fail_title">下载失败</string>
    <string name="download_fail_message">创建下载失败，请尝试去官网下载最新版</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="alert_dialog_title">温馨提示</string>
    <string name="share_title_url">https://zy.renyibao.com/ver.json</string>
    <string name="updating_progress_tittle">正在更新...</string>
    <!-- 更新(End) -->

    <!--RightMainFragment begin-->
    <string name="rb_ask">咨询</string>
    <string name="rb_diagnosis">诊断</string>
    <string name="rb_chinese_medical">中药</string>
    <string name="rb_with_chinese_medical">中成药</string>
    <string name="rb_western_medical">西药</string>
    <string name="rb_history">历史记录</string>
    <!--RightMainFragment end-->

    <!--DiagnosisFragment begin-->
    <string name="diagnosis_enter_tip">请输入诊断，该诊断内容将会在处方中显示出来</string>
    <string name="save_diagnosis">保存诊断</string>
    <!--DiagnosisFragment begin-->

    <!--ChineseMedicalFragment begin-->
    <string name="no_search">没有搜索结果</string>
    <string name="doc_signature">医师签名:</string>
    <string name="medical_count">共  %1$s  付</string>
    <string name="count">金额：</string>
    <string name="enter_usage">请输入用法用量</string>
    <string name="enter_letter">请输入拼音字母</string>
    <string-array name="chinese_fixed_list">
        <item>车前子</item>
        <item>人参</item>
        <item>卜芥</item>
        <item>儿茶</item>
        <item>八角</item>
        <item>丁香</item>
        <item>刀豆</item>
        <item>三七</item>
        <item>三棱</item>
        <item>当归</item>
        <item>鹿茸</item>
        <item>大黄</item>
        <item>山药</item>
        <item>川乌</item>
        <item>天麻</item>
        <item>马宝</item>
        <item>马勃</item>
        <item>天冬</item>
    </string-array>
    <string-array name="med_count_num">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="med_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="med_has_been_chosen">该药品已经存在</string>
    <string name="please_choose_count">请开具处方数量</string>
    <string name="delete">删除</string>
    <string name="pleas_enter_usage">请输入用法用量</string>
    <string name="money_count_tip">(此价格仅供参考)</string>
    <string name="yuan">元</string>
    <string name="please_choose_med_count">请选择开具付数</string>
    <string name="count_unit">付</string>
    <string name="chat_close">还未接诊或已结束，无法开处方</string>
    <string name="chat_close_diagnosis">还未接诊或已结束，无法开诊断</string>
    <!--ChineseMedicalFragment end-->

    <!--DiagnosisFragment begin-->
    <string name="please_enter_dialogsis">请输入诊断</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <!--DiagnosisFragment end-->

    <!--WesternFragment begin-->
    <string-array name="western_fixed_list">
        <item>普伐他汀钠片</item>
        <item>曲匹布通片</item>
        <item>曲匹布通片</item>
        <item>复方甘草酸苷注射液</item>
        <item>盐酸罂粟碱氯化钠注射液</item>
        <item>艾司唑仑片</item>
        <item>注射用头孢哌酮钠</item>
        <item>磷酸奥司他韦胶囊</item>
        <item>红霉素肠溶胶囊</item>
        <item>葡萄糖注射液</item>
        <item>复方甘草酸苷片</item>
        <item>卡托普利片</item>
        <item>盐酸特比萘芬片</item>
        <item>罗红霉素缓释胶囊</item>
        <item>利巴韦林颗粒</item>
        <item>注射用脂溶性维生素</item>
        <item>维生素K1片</item>
        <item>氯雷他定片</item>
    </string-array>
    <string-array name="med_count_day">
        <item>1</item>
        <item>7</item>
        <item>14</item>
        <item>21</item>
        <item>28</item>
        <item>35</item>
    </string-array>
    <string name="day">天</string>
    <string name="data_error">数据库读取异常</string>
    <string name="net_error">网络连接超时</string>
    <string name="pic_error">签名图片返回异常</string>
    <!--WesternFragment end-->

    <!--keyboardView start-->
    <string-array name="key_row1">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
    </string-array>
    <string-array name="key_row2">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
    </string-array>
    <string-array name="key_row3">
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
    </string-array>
    <string-array name="key_row4">
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
    </string-array>
    <!--keyboardView end-->

    <!--WithdrawCrashFragment begin-->
    <string name="withdraw_way">提现方式</string>
    <string name="we_chat_change">微信零钱（%1$s）</string>
    <string name="withdraw_count">提现金额</string>
    <string name="rmb">¥</string>
    <string name="my_balance">我的余额¥%1$s，</string>
    <string name="withdraw_all">全部提现</string>
    <string name="withdraw_tip">输入提现金额超过余额</string>
    <string name="count_error">金额格式错误</string>
    <!--WithdrawCrashFragment end-->

    <!--MyHistoryDetailFragment begin-->
    <string name="my_history_detail">问诊详情</string>
    <string name="pay_fee">付款金额：¥</string>
    <string name="brief_introduction">疾病名称：</string>
    <string name="brief_detail">疾病明细：</string>
    <string name="has_pay">已付费</string>
    <string name="ever_pay">未付费</string>
    <string name="age">岁</string>
    <string name="first_ask">初诊</string>
    <string name="more_ask">复诊</string>
    <string name="diagnosis">诊断</string>
    <string name="med">开具处方</string>
    <string name="med_no">处方号：</string>
    <string name="med_count">处方量：</string>
    <string name="med_price">处方价格（¥）：</string>
    <!--MyHistoryDetailFragment end-->

    <!--IncomeBillDetailFragment begin-->
    <string name="income_bill_detail">收入账单详情</string>
    <string name="date_format">%1$s年%2$s月</string>
    <string name="income_count">收款金额：</string>
    <string name="income_time">收款时间：</string>
    <string name="income_status">当前状态：</string>
    <string name="income_no">交易单号：</string>
    <!--IncomeBillDetailFragment end-->

</resources>
