<?xml version="1.0" encoding="utf-8"?>
<com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_back"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.witnsoft.libinterhis.utils.ClearEditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="75px"
        android:layout_marginLeft="350px"
        android:layout_marginRight="350px"
        android:layout_marginTop="250px"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:hint="@string/enter_user_name"
        android:paddingLeft="@dimen/margin_normal_25"
        android:singleLine="true"
        android:textColor="@color/text_dark_color"
        android:textColorHint="@color/text_gray_color"
        android:textSize="@dimen/text_big"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="350px"
        android:layout_marginRight="350px"
        android:background="@color/divider_color"
        android:visibility="gone"/>

    <com.witnsoft.libinterhis.utils.ClearEditText
        android:id="@+id/et_user_password"
        android:layout_width="match_parent"
        android:layout_height="75px"
        android:layout_marginLeft="350px"
        android:layout_marginRight="350px"
        android:layout_marginTop="50px"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:hint="@string/user_password"
        android:paddingLeft="@dimen/margin_normal_25"
        android:singleLine="true"
        android:textColor="@color/text_dark_color"
        android:textColorHint="@color/text_gray_color"
        android:textSize="@dimen/text_big"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="380px"
        android:layout_marginRight="380px"
        android:layout_marginTop="80px"
        android:background="@drawable/btn_login"
        android:padding="@dimen/margin_normal_25"
        android:text="@string/user_login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"/>

</com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>