<?xml version="1.0" encoding="utf-8"?>
<com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_divider_color"
    android:orientation="vertical">

    <com.witnsoft.libinterhis.utils.ui.AutoScaleRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_normal_25"
            android:paddingRight="@dimen/margin_normal_25"
            android:visibility="visible">

            <ImageView
                android:layout_width="35px"
                android:layout_height="35px"
                android:background="@drawable/back"/>

        </com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/to_cash"
            android:textColor="@color/text_dark_color"
            android:textSize="@dimen/text_big"/>

    </com.witnsoft.libinterhis.utils.ui.AutoScaleRelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color"/>

    <com.witnsoft.libinterhis.utils.ui.AutoScaleScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal_25"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="@dimen/margin_normal_25">

                <com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="@string/withdraw_way"
                        android:textColor="@color/text_dark_color"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_normal_25"
                        android:gravity="bottom"
                        android:text="@string/we_chat_change"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_medium"/>

                </com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>

                <com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50px"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="@string/withdraw_count"
                        android:textColor="@color/text_dark_color"
                        android:textSize="@dimen/text_medium"/>

                    <com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_normal_25"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:text="@string/rmb"
                            android:textColor="@color/text_dark_color"
                            android:textSize="50px"/>

                        <EditText
                            android:id="@+id/et_count"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin_normal_25"
                            android:background="@color/colorWhite"
                            android:gravity="bottom"
                            android:inputType="numberDecimal"
                            android:singleLine="true"
                            android:textColor="@color/text_dark_color"
                            android:textSize="50px"/>

                    </com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/margin_normal_25"
                        android:background="@color/divider_color"/>

                </com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>

            </com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>

        </com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>

    </com.witnsoft.libinterhis.utils.ui.AutoScaleScrollView>

</com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>